--- a/pokedex/public/main.html
+++ b/pokedex/public/main.html
@@ -17,7 +17,11 @@
     <h1 id="title">PokeDex</h1>
 
     <form id="enterPoke">
-      <input type="text" id="pokeInput" placeholder="Enter a Pokemon's name" />
+      <input
+        type="text"
+        id="pokeInput"
+        placeholder="Enter a Pokemon's name (all lowercase)"
+      />
       <button id="formSubmit">Enter</button>
     </form>
 
