--- a/pokedex/public/main.html
+++ b/pokedex/public/main.html
@@ -15,13 +15,9 @@
   </head>
   <body>
     <h1 id="title">PokeDex</h1>
-
+    <p>Enter a pokemon's name (all lowercase)</p>
     <form id="enterPoke">
-      <input
-        type="text"
-        id="pokeInput"
-        placeholder="Enter a Pokemon's name (all lowercase)"
-      />
+      <input type="text" id="pokeInput" placeholder="Enter a Pokemon's name" />
       <button id="formSubmit">Enter</button>
     </form>
 
